# sv-agent-moodboard

./: .env.example  .gitignore  .gitmodules  PRODUCT.md  README.md  SPEC.md  TODO.md  docker-compose.yml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_items_table.py  0002_create_moodboard_tables.py
apps/api/app/: config.py  dbtask.py  dbteardown.py  ids.py  main.py
apps/api/app/db/: session.py
apps/api/app/dependencies/: auth.py
apps/api/app/models/: __init__.py  brief.py  item.py  moodboard.py
apps/api/app/providers/: __init__.py  images.py  llm.py  storage.py
apps/api/app/routers/: briefs.py  health.py  items.py  me.py  moodboards.py
apps/api/app/schemas/: __init__.py  brief.py  moodboard.py
apps/api/app/services/: __init__.py  briefing.py  directions.py  events.py  generation.py  htmlgen.py  stages.py
apps/api/tests/: conftest.py  test_auth.py  test_briefs.py  test_config.py  test_db.py  test_health.py  test_items.py  test_moodboard_db.py  test_moodboards.py  test_whoami.py
apps/frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/frontend/e2e/: dashboard.spec.ts  helpers.ts  modals.spec.ts
apps/frontend/src/: App.tsx  vite-env.d.ts
apps/frontend/src/api/: client.ts
apps/frontend/src/auth/: AuthContext.tsx  cognito.ts
apps/frontend/src/components/: Modal.module.css  Modal.tsx  ProtectedRoute.tsx
apps/frontend/src/features/brief/: BriefFlow.module.css  BriefFlow.tsx  DirectionsReview.tsx  (+15 more)
apps/frontend/src/pages/: Brief.module.css  Brief.tsx  Callback.tsx  Home.module.css  Home.tsx  Login.module.css  Login.tsx
apps/frontend/src/styles/: global.css  tokens.css
docs/: architecture.md  backend.md  frontend.md  infrastructure.md  testing.md
docs/design/: supervenient-brand-and-design-system.md  supervenient-design-tokens.json
scripts/: bootstrap-state.sh  cognito-test-token.sh  deploy.sh  fetch-cognito-config.sh  init-project.sh  teardown-db.sh
templates/: new-project-README.md
terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
