[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    # boto3 is used by app/dbtask.py (the one-shot DB bootstrap task) to read the
    # RDS master secret and write the service's DATABASE_URL secret, and by the
    # S3 asset-storage backend when s3_bucket is configured.
    "boto3>=1.34",
    # Moodboard agent + renderer. Both are lazy-imported inside their provider
    # adapters, so the app stays importable (and the test suite hermetic) without
    # credentials — the deterministic stubs run instead.
    "anthropic>=0.49",
    "replicate>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
